--- a/W4U2.0/app.json
+++ b/W4U2.0/app.json
@@ -1,14 +1,14 @@
 {
   "expo": {
-    "name": "Locadora-App",
-    "slug": "Locadora-App",
+    "name": "W4U",
+    "slug": "W4U",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/W4UP1.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/W4UP1.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
